# My_LMS

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_enrollment_remove_course_unique_course_owner_and_more.py
tests/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
tests/migrations/: 0001_initial.py  0002_test_course.py  0003_alter_answer_options_alter_question_options_and_more.py  0004_test_lesson_test_module_alter_test_course_and_more.py  0005_alter_test_options_remove_test_completed_at.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_role.py
