[tool.poetry]
name = "mylms"
version = "0.1.0"
description = ""
authors = ["Tatyana Kavardaeva <tatyana.kavardaeva@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
django = "4.2.2"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
ipython = "^8.29.0"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
