[tool.poetry]
name = "mylms"
version = "0.1.0"
description = ""
authors = ["Tatyana Kavardaeva <tatyana.kavardaeva@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
python-dotenv = "1.0.1"
djangorestframework = "3.15.2"
psycopg2-binary = "2.9.10"
pillow = "11.0.0"
ipython = "8.29.0"
djangorestframework-simplejwt = "5.3.1"
django = "5.1.3"
coverage = "7.6.8"
drf-yasg = "^1.21.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
